se avanza header

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -6,8 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/src/CSS/phone.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
- 
+    <script src="https://kit.fontawesome.com/7c25cd2572.js" crossorigin="anonymous"></script>
+    <header class="header">
+        <nav class="nav">
+            <div class="nav__bar">
+                <div class="nav__profile-avatar"></div>
+            </div>
+            <div class="nav__body">
+                <div class="nav__image-logo">
+                    <img class="nav__image-logo2" src="/src/img/logo1.png" alt="">
+                </div>
+                <div class="nav__card-youtube">
+                    <div class="card-youtube__icon">
+                        <i class="card-youtube__icon2 fa-brands fa-youtube"></i>
+                    </div>
+                    <div class="card-youtube__description">
+                        <p class="card-youtube__titulo">canal de youtube</p>
+                        <span class="card-youtube__description2">click aqui</span>
+                    </div>
+                </div>
+                <div class="nav__card-discord">
+                    <div class="card-discord__icon">
+                        <i class="card-discord__icon2 fa-brands fa-discord"></i>
+                    </div>
+                    <div class="card-discord__description">
+                        <p class="card-discord__titulo">canal de discord</p>
+                        <p class="card-discord__description2">click aqui</p>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
