--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/src/CSS/phone.css">
+    <title>VirtualRP</title>
+    <link rel="icon" href="/src/img/logo1.png">
+    <link rel="stylesheet" href="/src/CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -39,5 +40,83 @@
             </div>
         </nav>
     </header>
+    <main class="main">
+        <section class="section">
+            <article class="section__article">
+                <h1 class="section__titulo">
+                    Vip
+                </h1>
+                <ul class="section__ul">
+                    <li class="section__ul__li">Vip Donador</li>
+                    <li class="section__ul__li">Vip Clase Media-Alta</li>
+                    <li class="section__ul__li">Vip Empresario</li>
+                    <li class="section__ul__li">Vip Millonario</li>
+                    <li class="section__ul__li">Vip Narcotraficante</li>
+                    <li class="section__ul__li">Vip Magnate</li>
+                </ul>
+                <button class="section__button" type="">Ver Mas</button>
+            </article>
+            <article class="section__article">
+                <h1 class="section__titulo">
+                    Roles Privados
+                </h1>
+                <ul class="section__ul">
+                    <li class="section__ul__li">Rol Gánster</li>
+                    <li class="section__ul__li">Rol Mafia</li>
+                    <li class="section__ul__li">Rol Mafia Vip</li>
+                    <li class="section__ul__li">Rol Juggernaut</li>
+                    <li class="section__ul__li">Rol Presidente de Casino</li>
+                    <li class="section__ul__li">Rol Guardia</li>
+                    <li class="section__ul__li">Rol Armagedon</li>
+                </ul>
+                <button class="section__button" type="">Ver Mas</button>
+            </article>
+            <article class="section__article">
+                <h1 class="section__titulo">
+                    Servicio de Configuracion
+                </h1>
+                <ul class="sectiom__ul"> 
+                    <li class="section__ul__li">Soporte Tecnico Inicial</li> 
+                    <li class="section__ul__li">Servicio de Configuracion "vanilla"-"semiVanilla"</li> 
+                    <li class="section__ul__li">Servicio de Configuracion RolePlay Basica</li>                 
+                    <li class="section__ul__li">Servicio de Configuracion RolePlay Media</li>   
+                    <li class="section__ul__li">Servicio de Configuracion RolePlay Avanzada</li>      
+                    <li class="section__ul__li">Personalizado</li>   
+                </ul>
+                <button class="section__button" type="">Ver Mas</button>
+            </article>
+            <article class="section__article">
+                <h1 class="section__titulo">
+                    Servicio Virtual Host
+                </h1>
+                <ul class="section__ul">
+                    <li class="section__ul__li">Plan Virtual Basico</li> 
+                    <li class="section__ul__li">Plan Virtual Pro</li>                  
+                </ul>
+                <button class="section__button" type="">Ver Mas</button>
+            </article>
+            <article class="section__article">
+                <h1 class="section__titulo">
+                    Informacion/Extras
+                </h1>
+                <ul class="section ul">
+                    <li class="section__ul__li">Términos y condiciones del Marketing Vip de Virtual Community</li> 
+                    <li class="section__ul__li">Informacion de Método de pago</li>    
+                </ul>
+                <button class="section__button" type="">Ver Mas</button>
+            </article>
+            <article class="section__article">
+                <h1 class="section__titulo">
+                    Contacto
+                </h1>
+                <ul class="section ul">
+                    <li class="section__ul__li">Conoce el Canal de Youtube</li>  
+                    <li class="section__ul__li">Conoce el Canal de Discord</li>  
+                    <li class="section__ul__li">Escribenos al WhatsApp</li>  
+                </ul>
+                <button class="section__button" type="">Ver Mas</button>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
