se crea footer y se avanza en las areas de header y main

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -20,28 +20,45 @@
                 <div class="nav__image-logo">
                     <img class="nav__image-logo2" src="/src/img/logo1.png" alt="">
                 </div>
-                <div class="nav__card-youtube">
-                    <div class="card-youtube__icon">
-                        <i class="card-youtube__icon2 fa-brands fa-youtube"></i>
+                <div class="nav__card">
+                    <div class="nav__card__icon">
+                        <i class="nav__card__icon2 fa-brands fa-youtube"></i>
                     </div>
-                    <div class="card-youtube__description">
-                        <p class="card-youtube__titulo">canal de youtube</p>
-                        <span class="card-youtube__description2">click aqui</span>
+                    <div class="nav__card__description">
+                        <p class="nav__card__titulo">canal de youtube</p>
+                        <span class="nav__card__description2">click aqui</span>
                     </div>
                 </div>
-                <div class="nav__card-discord">
-                    <div class="card-discord__icon">
-                        <i class="card-discord__icon2 fa-brands fa-discord"></i>
+                <div class="nav__card">
+                    <div class="nav__card__icon">
+                        <i class="nav__card__icon2 fa-brands fa-discord"></i>
                     </div>
-                    <div class="card-discord__description">
-                        <p class="card-discord__titulo">canal de discord</p>
-                        <p class="card-discord__description2">click aqui</p>
+                    <div class="nav__card__description">
+                        <p class="nav__card__titulo">canal de discord</p>
+                        <p class="nav__card__description2">click aqui</p>
                 </div>
             </div>
         </nav>
     </header>
     <main class="main">
         <section class="section">
+
+            <article class="section__article">
+                <h1 class="section__titulo2">
+                    VirtualRP
+                </h1>
+                <h3 class="section__titulo3">Bienbenido al Sitio Web <span class="celeste">Oficial</span> </h3>
+                <p class="section__text">
+                    Bienbenido al Sitio Web Oficial de <span class="rose">VirtualRP</span> <br>
+                    podras encontrar los mejores productos/servicios como: <br> <br>
+                    <span class="celeste">Planes-Virtual-Host</span> <br> 
+                    <span class="rose">Soportes-servicios </span> <br>
+                    Roles Vip <br> 
+                    <span class="rose">las mejores ofertas</span> <br>
+                    <span class="celeste">¡Y Mucho Mas!</span>
+                </p>
+            </article>
+
             <article class="section__article">
                 <h1 class="section__titulo">
                     Vip
@@ -99,24 +116,20 @@
                 <h1 class="section__titulo">
                     Informacion/Extras
                 </h1>
-                <ul class="section ul">
+                <ul class="section__ul">
                     <li class="section__ul__li">Términos y condiciones del Marketing Vip de Virtual Community</li> 
                     <li class="section__ul__li">Informacion de Método de pago</li>    
                 </ul>
                 <button class="section__button" type="">Ver Mas</button>
             </article>
-            <article class="section__article">
-                <h1 class="section__titulo">
-                    Contacto
-                </h1>
-                <ul class="section ul">
-                    <li class="section__ul__li">Conoce el Canal de Youtube</li>  
-                    <li class="section__ul__li">Conoce el Canal de Discord</li>  
-                    <li class="section__ul__li">Escribenos al WhatsApp</li>  
-                </ul>
-                <button class="section__button" type="">Ver Mas</button>
-            </article>
         </section>
     </main>
+    <footer class="footer">
+        <ul class="ul">
+            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <a class="ul__li__a"  href=""> Conoce el Canal de <span class="rose">Youtube</span></a></li>  
+            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
+            <li class="ul__li ul__li--w"> <i class="ul__li__icon fa-brands fa-whatsapp"></i> <a class="ul__li__a" href="">Escribenos al <span class="rose">WhatsApp</span></a></li>  
+        </ul>
+    </footer>
 </body>
 </html>
