se soluciona error de escritura

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -48,7 +48,7 @@
         <section class="section--welcome">
             <article class="section__article--welcome">
                 <p class="section__text">
-                    Bienbenido al Sitio Web Oficial de <span class="rose">VirtualRP</span> <br>
+                    Bienvenido al Sitio Web Oficial de <span class="rose">VirtualRP</span> <br>
                     podras encontrar los mejores productos/servicios como: <br> <br>
                     <span class="celeste">Planes-Virtual-Host <br> 
                     Soportes-servicios <br>
@@ -62,9 +62,9 @@
         <section class="section">
 
             <article class="section__article">
-                <h1 class="section__titulo">
+                <h2 class="section__titulo">
                     Vip
-                </h1>
+                </h2>
                 <ul class="section__ul">
                     <li class="section__ul__li">Vip Donador</li>
                     <li class="section__ul__li">Vip Clase Media-Alta</li>
@@ -76,9 +76,9 @@
                 <button class="section__button" type="">Ver Mas</button>
             </article>
             <article class="section__article">
-                <h1 class="section__titulo">
+                <h2 class="section__titulo">
                     Roles Privados
-                </h1>
+                </h2>
                 <ul class="section__ul">
                     <li class="section__ul__li">Rol Gánster</li>
                     <li class="section__ul__li">Rol Mafia</li>
@@ -91,9 +91,9 @@
                 <button class="section__button" type="">Ver Mas</button>
             </article>
             <article class="section__article">
-                <h1 class="section__titulo">
-                    Servicio de Configuracion
-                </h1>
+                <h2 class="section__titulo">
+                    Servicio Configuracion
+                </h2>
                 <ul class="sectiom__ul"> 
                     <li class="section__ul__li">Soporte Tecnico Inicial</li> 
                     <li class="section__ul__li">Servicio de Configuracion "vanilla"-"semiVanilla"</li> 
@@ -105,9 +105,9 @@
                 <button class="section__button" type="">Ver Mas</button>
             </article>
             <article class="section__article">
-                <h1 class="section__titulo">
+                <h2 class="section__titulo">
                     Servicio Virtual Host
-                </h1>
+                </h2>
                 <ul class="section__ul">
                     <li class="section__ul__li">Plan Virtual Basico</li> 
                     <li class="section__ul__li">Plan Virtual Pro</li> 
@@ -115,9 +115,9 @@
                 <button class="section__button" type="">Ver Mas</button>
             </article>
             <article class="section__article">
-                <h1 class="section__titulo">
+                <h2 class="section__titulo">
                     Informacion/Extras
-                </h1>
+                </h2>
                 <ul class="section__ul">
                     <li class="section__ul__li">Términos y condiciones</li> 
                     <li class="section__ul__li">Informacion de Método de pago</li>  
