modificaciones de estilo

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -44,7 +44,6 @@
         </nav>
     </header>
     <main class="main">
-
         <section class="section--welcome">
             <article class="section__article--welcome">
                 <p class="section__text">
@@ -58,9 +57,7 @@
                 </p>
             </article>
         </section>
-
         <section class="section">
-
             <article class="section__article">
                 <h2 class="section__titulo">
                     Vip
@@ -73,7 +70,7 @@
                     <li class="section__ul__li">Vip Narcotraficante</li>
                     <li class="section__ul__li">Vip Magnate</li>
                 </ul>
-                <button class="section__button" type="">Ver Mas</button>
+                <a href="vip.html" class="section__button" type="">Ver Mas</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -86,23 +83,21 @@
                     <li class="section__ul__li">Rol Juggernaut</li>
                     <li class="section__ul__li">Rol Presidente de Casino</li>
                     <li class="section__ul__li">Rol Guardia</li>
-                    <!-- <li class="section__ul__li">Rol Armagedon</li> -->
                 </ul>
-                <button class="section__button" type="">Ver Mas</button>
+                <a href="rolesPrivados.html" class="section__button" type="">Ver Mas</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
                     Servicio Configuracion
                 </h2>
-                <ul class="sectiom__ul"> 
+                <ul class="section__ul"> 
                     <li class="section__ul__li">Soporte Tecnico Inicial</li> 
                     <li class="section__ul__li">Servicio de Configuracion "vanilla"-"semiVanilla"</li> 
                     <li class="section__ul__li">Servicio de Configuracion RolePlay Basica</li>                 
-                    <!-- <li class="section__ul__li">Servicio de Configuracion RolePlay Media</li>    -->
                     <li class="section__ul__li">Servicio de Configuracion RolePlay Avanzada</li>      
                     <li class="section__ul__li">Personalizado</li>   
                 </ul>
-                <button class="section__button" type="">Ver Mas</button>
+                <a href="mantenimiento.html" class="section__button" type="">Ver Mas</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -112,7 +107,7 @@
                     <li class="section__ul__li">Plan Virtual Basico</li> 
                     <li class="section__ul__li">Plan Virtual Pro</li> 
                 </ul>
-                <button class="section__button" type="">Ver Mas</button>
+                <a href="virtualHost.html" class="section__button" type="">Ver Mas</a>
             </article>
             <article class="section__article">
                 <h2 class="section__titulo">
@@ -121,10 +116,8 @@
                 <ul class="section__ul">
                     <li class="section__ul__li">Términos y condiciones</li> 
                     <li class="section__ul__li">Informacion de Método de pago</li>  
-                       
-                
                 </ul>
-                <button class="section__button" type="">Ver Mas</button>
+                <a href="informacion.html" class="section__button" type="">Ver Mas</a>
             </article>
         </section>
     </main>
