--- a/src/HTML/vip.html
+++ b/src/HTML/vip.html
@@ -4,10 +4,181 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/src/CSS/vip.css">
+    <title>Vip</title>
+    <link rel="icon" href="/src/img/logo1.png">
+    <link rel="stylesheet" href="/src/CSS/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/src/CSS/desktop.css" Media="(min-width: 75rem)"> 
 </head>
 <body>
-    
+    <script src="https://kit.fontawesome.com/7c25cd2572.js" crossorigin="anonymous"></script>
+    <header class="header">
+        <nav class="nav">
+            <div class="nav__bar">
+                <a href="index.html" class="nav__bar__icon">
+                    <i class="nav__bar__icon2 fa-solid fa-house"></i>
+                </a>
+            </div>
+            <div class="nav__body">
+                <div class="nav__image-logo">
+                    <img class="nav__image-logo2" src="/src/img/logo1.png" alt="logotipo">
+                </div>
+                <div class="nav__card nav__card--y">
+                    <div class="nav__card__icon">
+                        <i class="nav__card__icon2 fa-brands fa-youtube"></i>
+                    </div>
+                    <div class="nav__card__description">
+                        <p class="nav__card__titulo">canal de youtube</p>
+                        <span class="nav__card__description2">click aqui</span>
+                    </div>
+                </div>
+                <div class="nav__card nav__card--d">
+                    <div class="nav__card__icon">
+                        <i class="nav__card__icon2 fa-brands fa-discord"></i>
+                    </div>
+                    <div class="nav__card__description">
+                        <p class="nav__card__titulo">canal de discord</p>
+                        <p class="nav__card__description2">click aqui</p>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="section--welcome">
+            <article class="section__article--welcome">
+                <p class="section__text">
+                    Bienvenido a la zona <span class="celeste">Vip</span> de <span class="rose">VirtualRP</span> <br>
+                    a continuacion se mostraran los articulos <span class="celeste">disponibles</span> 
+                </p>
+            </article>
+        </section>
+        <section class="section">
+            <article class="section__article">
+                <h2 class="section__titulo">
+                    Vip Donador
+                </h2>
+                <ul class="section__ul">
+                    <li class="section__ul__li">1 auto vanilla (Mod) a elección</li>
+                    <li class="section__ul__li">1 Habitación de departamento a elección </li>
+                    <li class="section__ul__li">400k De regalo</li>
+                    <li class="section__ul__li">Acceso al /Kit VIP Donador</li>
+                    <li class="section__ul__li">Rango VIP Donador en el discord
+                    </li>
+                    <li class="section__ul__li">acceso a canales exclusivos</li>
+                    <li class="section__ul__li">precio: <span class="rose">2 dolares</span></li>
+                </ul>
+                <a href="#" class="section__button" type="">Comprar</a>
+            </article>
+            <article class="section__article">
+                <h2 class="section__titulo">
+                    VIP Clase Media-Alta
+                </h2>
+                <ul class="section__ul">
+                    <li class="section__ul__li">1 jaguar</li>
+                    <li class="section__ul__li">2 coches vanilla (Mod) a elección</li>
+                    <li class="section__ul__li">1 Casa mediana a elección</li>
+                    <li class="section__ul__li">1 Habitación de departamento a elección 
+                    </li>
+                    <li class="section__ul__li">1.2M De regalo</li>
+                    <li class="section__ul__li">Acceso al /Kit VIP Media-Alta
+                    </li>
+                    <li class="section__ul__li">Rango VIP Media-Alta en el discord</li>
+                    <li class="section__ul__li">acceso a canales exclusivos</li>
+                    <li class="section__ul__li">precio: <span class="rose">5 dolares</span></li>                           </ul>
+                <a href="#" class="section__button" type="">Comprar</a>
+            </article>
+            <article class="section__article">
+                <h2 class="section__titulo">
+                    VIP Empresario
+                </h2>
+                <ul class="section__ul"> 
+                    <li class="section__ul__li">2 autos gama alta a elección</li> 
+                    <li class="section__ul__li">2 autos gama media a elección</li> 
+                    <li class="section__ul__li">1 Helicóptero simple</li>                 
+                    <li class="section__ul__li">1 Casa grande a elección</li>      
+                    <li class="section__ul__li">1 casa mediana a elección</li>   
+                    <li class="section__ul__li">1 Edificio entero para tu empresa</li>  
+                    <li class="section__ul__li">1 granero a elección</li>  
+                    <li class="section__ul__li">2.8M de regalo</li>  
+                    <li class="section__ul__li">acceso al /Kit VIP Empresario</li> 
+                    <li class="section__ul__li">Rango VIP Empresario en el discord</li> 
+                    <li class="section__ul__li">acceso a canales exclusivos</li> 
+                    <li class="section__ul__li">precio: <span class="rose">10 dolares</span></li>              
+                </ul>
+                <a href="#" class="section__button" type="">Comprar</a>
+            </article>
+            <article class="section__article">
+                <h2 class="section__titulo">
+                    VIP Millonario
+                </h2>
+                <ul class="section__ul">
+                    <li class="section__ul__li">1 mansion Vip</li> 
+                    <li class="section__ul__li">2 casas medianas a elección</li> 
+                    <li class="section__ul__li">1 granero a elección</li> 
+                    <li class="section__ul__li">4 autos gama alta a elección</li> 
+                    <li class="section__ul__li">2 motos de 500k</li> 
+                    <li class="section__ul__li">1 helicóptero a elección</li> 
+                    <li class="section__ul__li">6M de regalo</li> 
+                    <li class="section__ul__li">Acceso al /Kit VIP Millonario</li> 
+                    <li class="section__ul__li">Rango en discord VIP Millonario</li> 
+                    <li class="section__ul__li">precio: <span class="rose">15 dolares</span></li>
+                </ul>
+                <a href="#" class="section__button" type="">Comprar</a>
+            </article>
+            <article class="section__article">
+                <h2 class="section__titulo">
+                    VIP Narcotraficante
+                </h2>
+                <ul class="section__ul">
+                    <li class="section__ul__li">1 mansiones Vip</li> 
+                    <li class="section__ul__li">1 mansion</li>  
+                    <li class="section__ul__li">1 yate</li> 
+                    <li class="section__ul__li">1 casa grande a elección</li>
+                    <li class="section__ul__li">2 graneros a elección</li> 
+                    <li class="section__ul__li">2 Habitaciones de departamento a elección </li>
+                    <li class="section__ul__li">4 autos gama alta a elección</li> 
+                    <li class="section__ul__li">1 auto exclusivo</li>  
+                    <li class="section__ul__li">2 helicóptero a elección</li> 
+                    <li class="section__ul__li">20M de regalo</li>
+                    <li class="section__ul__li">Acceso al /Kit VIP Narcotraficante</li> 
+                    <li class="section__ul__li"> kit personalizado con pistola legal ( pistola semi automática )</li>
+                    <li class="section__ul__li">Rango en discord VIP Narcotraficante</li>
+                    <li class="section__ul__li">precio: <span class="rose">22 dolares</span></li>      
+                </ul>
+                <a href="#" class="section__button" type="">Comprar</a>
+            </article>
+            <article class="section__article">
+                <h2 class="section__titulo">
+                    VIP Magnate
+                </h2>
+                <ul class="section__ul">
+                    <li class="section__ul__li">1 isla privada ( isla magnate )</li> 
+                    <li class="section__ul__li">1 yate</li>  
+                    <li class="section__ul__li">2 mansiones Vip</li> 
+                    <li class="section__ul__li">1 casa grande a elección</li>
+                    <li class="section__ul__li">1 casa mediana a elección</li> 
+                    <li class="section__ul__li">3 Habitaciones de departamentos a elección</li>
+                    <li class="section__ul__li">2 graneros a elección</li> 
+                    <li class="section__ul__li">7 autos gama alta a elección</li>  
+                    <li class="section__ul__li">2 autos exclusivos</li> 
+                    <li class="section__ul__li">2 helicópteros a elección</li>
+                    <li class="section__ul__li">1 jet privado</li> 
+                    <li class="section__ul__li">30M de regalo</li>
+                    <li class="section__ul__li">Acceso al /Kit VIP Magnate</li>
+                    <li class="section__ul__li">Acceso a un kit personalizado ( con cualquier arma legal )</li>
+                    <li class="section__ul__li">Rango en discord VIP Magnate/li>
+                    <li class="section__ul__li">precio: <span class="rose">30 dolares</span></li>
+                </ul>
+                    <a href="#" class="section__button" type="">Comprar</a>
+            </article>
+        </section>
+    </main>
+    <footer class="footer">
+        <ul class="ul">
+            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <a class="ul__li__a"  href=""> Conoce el Canal de <span class="rose">Youtube</span></a></li>  
+            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
+            <li class="ul__li ul__li--w"> <i class="ul__li__icon fa-brands fa-whatsapp"></i> <a class="ul__li__a" href="">Escribenos al <span class="rose">WhatsApp</span></a></li>  
+        </ul>
+    </footer>
 </body>
 </html>
