--- a/src/HTML/mantenimiento.html
+++ b/src/HTML/mantenimiento.html
@@ -4,10 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/src/CSS/mantenimiento.css">
+    <title>Servicio Configuracion</title>
+    <link rel="icon" href="/src/img/logo1.png">
+    <link rel="stylesheet" href="/src/CSS/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/src/CSS/desktop.css" Media="(min-width: 75rem)"> 
 </head>
 <body>
-    
+    <script src="https://kit.fontawesome.com/7c25cd2572.js" crossorigin="anonymous"></script>
+    <header class="header">
+        <nav class="nav">
+            <div class="nav__bar">
+                <a href="index.html" class="nav__bar__icon">
+                    <i class="nav__bar__icon2 fa-solid fa-house"></i>
+                </a>
+            </div>
+            <div class="nav__body">
+                <div class="nav__image-logo">
+                    <img class="nav__image-logo2" src="/src/img/logo1.png" alt="logotipo">
+                </div>
+                <div class="nav__card nav__card--y">
+                    <div class="nav__card__icon">
+                        <i class="nav__card__icon2 fa-brands fa-youtube"></i>
+                    </div>
+                    <div class="nav__card__description">
+                        <p class="nav__card__titulo">canal de youtube</p>
+                        <span class="nav__card__description2">click aqui</span>
+                    </div>
+                </div>
+                <div class="nav__card nav__card--d">
+                    <div class="nav__card__icon">
+                        <i class="nav__card__icon2 fa-brands fa-discord"></i>
+                    </div>
+                    <div class="nav__card__description">
+                        <p class="nav__card__titulo">canal de discord</p>
+                        <p class="nav__card__description2">click aqui</p>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="section--welcome">
+            <article class="section__article--welcome">
+                <p class="section__text">
+                    Hola acá les presento el apartado de servicios externos de <span class="rose">VirtualRP</span>,
+                     en este apartado se venderán configuraciones personalizadas para tu servidor, 
+                     ya sea que estés comenzando un pequeño proyecto survival vanilla 
+                     o quieras hacer una configuración avanzada de un gran servidor Role Play, 
+                     contamos con un Configurador experimentado capaz de hacer preciosas obras de arte en tu consola,
+                     <span class="celeste">configuraciones de todo tipo a un precio increíble! </span> 
+                </p>
+            </article>
+        </section>
+        <section class="section">
+            <article class="section__article">
+                <h2 class="section__titulo">
+                    Servicio Configuracion
+                </h2>
+                <ul class="section__ul">
+                    <li class="section__ul__li">Soporte Técnico Inicial:  <span class="rose"> FREE</span></li>
+                    <li class="section__ul__li"> Servicio de Configuración "Vanilla" - "Semi Vanilla": <span class="rose">4 dolares</span></li>
+                    <li class="section__ul__li"> Servicio de Configuración RolePlay Básica: <span class="rose">6 dolares</span></li>
+                    <li class="section__ul__li">Servicio de Configuración RolePlay Media: <span class="rose">15 dolares</span></li>
+                    <li class="section__ul__li">Servicio de Configuración RolePlay Avanzada:<span class="rose">40 dolares</span></li>
+                </ul>
+                <a href="#" class="section__button" type=""> canal de discord</a>
+            </article>     
+        </section>
+    </main>
+    <footer class="footer">
+        <ul class="ul">
+            <li class="ul__li ul__li--y"> <i class="ul__li__icon fa-brands fa-youtube"></i> <a class="ul__li__a"  href=""> Conoce el Canal de <span class="rose">Youtube</span></a></li>  
+            <li class="ul__li ul__li--d"> <i class="ul__li__icon fa-brands fa-discord"></i> <a class="ul__li__a" href="">Conoce el Canal de <span class="celeste">Discord</span></a></li>  
+            <li class="ul__li ul__li--w"> <i class="ul__li__icon fa-brands fa-whatsapp"></i> <a class="ul__li__a" href="">Escribenos al <span class="rose">WhatsApp</span></a></li>  
+        </ul>
+    </footer>
 </body>
 </html>
