se modifica titulo y un texto

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VirtualRP</title>
+    <title>Virtual Comunity</title>
     <link rel="icon" href="/src/img/logo1.png">
     <link rel="stylesheet" href="/src/CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
@@ -47,7 +47,7 @@
         <section class="section--welcome">
             <article class="section__article--welcome">
                 <p class="section__text">
-                    Bienvenido al Sitio Web Oficial de <span class="rose">VirtualRP</span> <br>
+                    Bienvenido al Sitio Web Oficial de <span class="rose">Virtual Comunity</span> <br>
                     podras encontrar los mejores productos/servicios como: <br> <br>
                     <span class="celeste">Planes-Virtual-Host <br> 
                     Soportes-servicios <br>
